trunk/Archive2/7b/bc468f6cd48c2e/output
main.cpp:23:44: error: 'type name' declared as function returning a function
   typename std::result_of<decltype(dub)(int)>::type operator*() {return dub(*p);}
                                            ^
main.cpp:23:45: error: template argument 1 is invalid
   typename std::result_of<decltype(dub)(int)>::type operator*() {return dub(*p);}
                                             ^
